fixing homepage. not responsive yet

--- a/css/homepage_client_style.css
+++ b/css/homepage_client_style.css
@@ -100,12 +100,11 @@ body>header ul>li:last-child {
 
 #add-and-search {
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: auto;
-    margin: 0;
+    margin: 2em;
     margin-top: 1.5em;
-    margin-bottom: .5em;
-    padding: .2em;
+    margin-bottom: 1.5em;
     align-items: center;
     justify-content: space-between;
 }
@@ -117,7 +116,7 @@ body>header ul>li:last-child {
     background-color: #939391;
     font-size: 1em;
     font-weight: lighter;
-    margin: 0 1em 0 2em;
+    margin: 0 2em 0 2em;
     padding: .4em 1em;
     text-align: center;
     border-style: none;
@@ -134,12 +133,12 @@ body>header ul>li:last-child {
     grid-column: 2 / 3;
     font-size: .8em;
     font-weight: lighter;
-    width: 35%;
+    width: 50%;
     padding: .6em 1.2em;
     border-style: none;
     border-radius: 4px;
     background-color: white;
-    margin-left: 1em;
+    margin-left: 2em;
 }
 
 #add-and-search>input::placeholder {
@@ -150,6 +149,7 @@ body>header ul>li:last-child {
 
 #add-and-search>#filters-div {
     grid-column: 3 / -1 ;
+    justify-self: end;
 }
 
 /* End of add new ticket and search bar */
@@ -386,6 +386,7 @@ body>header ul>li:last-child {
 .main-content {
     display: grid;
     grid-template-columns: 1fr 4fr;
+    margin: 0 2em 2em 2em;
 }
 
 .filter {
@@ -400,17 +401,19 @@ body>header ul>li:last-child {
 }
 
 .departments {
-    background-color: #fff;
-    border-radius: 3px;
     display: flex;
     flex-direction: column;
     text-align: center;
     text-justify: center;
-    margin: 0 0 0 1em;
-    padding: 1em;
+    margin: 0;
+    padding:0;
+    min-width: 120px;
 }
 
+
 .departments>li {
+    background-color: #fff;
+    border-radius: 3px;
     text-align: center;
     text-justify: start;
     margin: space-around;
@@ -433,22 +436,31 @@ body>header ul>li:last-child {
     display: flex;
     flex-direction: column;
     background-color: #D9D9D9;
-    margin: 0 0 .1em 3em;
+    margin: 0 0 .1em 2em;
     padding: 0;
 }
 
 .tickets-list>ul>li {
     background-color: #fff;
     margin: .65em;
+    margin-left: 0;
+    margin-right: 0;
     border-radius: 4px;
 }
 
+.tickets-list>ul>li:first-child {
+    margin-top:0;
+}
 .tickets-list>ul>li>ul {
     display: flex;
     flex-direction: row;
     height: 4em;
     gap: 16em;
+    padding: 0;
+    justify-content: space-between;
 }
+
+
 
 .tickets-list>ul>li>ul>li {
     padding: .5em;
@@ -462,6 +474,27 @@ body>header ul>li:last-child {
     padding: 0;
     width: auto;
 }
+
+.tickets-list>ul>li>ul li:first-child{
+    align-self: flex-start;
+    flex: 1 10%;
+}
+
+.tickets-list>ul>li>ul li:nth-child(2){
+    align-self: flex-start;
+    flex: 1 40%;
+}
+
+.tickets-list>ul>li>ul li:nth-child(3){
+    align-self: flex-end;
+    flex: 1 20%;
+}
+
+.tickets-list>ul>li>ul li:nth-child(4){
+    align-self: flex-end;
+    flex: 1 20%;
+}
+
 
 /* End of main content */
 /* Start of footer */
