--- a/css/ticket.css
+++ b/css/ticket.css
@@ -13,7 +13,7 @@
 .ticket-discussion {
     background-color: white;
     grid-column: 2 / -1;
-    margin: 1em 2em 1em 1em;
+    margin: 0 0 1em 1.65em;
     min-height: 600px;
     display: flex;
     flex-direction: column;
